--- a/Prep/.project
+++ b/Prep/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Prep</name>
+	<name>P</name>
 	<comment></comment>
 	<projects>
 	</projects>
